<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>bsnes_ros</name>
  <version>0.0.1</version>
  <description>Colcon package to build bsnes emulator.</description>

  <maintainer email="jonbonne@gmail.com">Jonathan Salinas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>pybind11</build_depend>
  <build_depend>libao-dev</build_depend>
  <build_depend>libopenal-dev</build_depend>
  <build_depend>libcairo2-dev</build_depend>
  <build_depend>libgtk2.0-dev</build_depend>
  <build_depend>libgtksourceview2.0-dev</build_depend>
  <build_depend>libxv-dev</build_depend>
  <build_depend>libasound2-dev</build_depend>
  <build_depend>libpulse-dev</build_depend>
  <build_depend>libsdl2-dev</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pybind11</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
